<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Foxes with Friends</string>
    <string name="menu_settings">Settings</string>
    <string name="button_new">New</string>
    <string name="button_photo">Choose a photo</string>
    <string name="button_save">Save</string>
    <string name="name_input">Name your fox</string>
    <string name="title_activity_fox_list_fragment">Current foxes</string>
    <string name="title_activity_add_fox">Add a fox</string>
    <string name="title_activity_login">Log in to see some foxes!</string>
    <string name="user_name">username</string>
    <string name="password">password</string>
    <string name="log_in_with_parse">log in</string>
    <string name="log_out">log out</string>
    <string name="sign_up">sign up</string>
    <string name="app_id">your facebook app id</string>
    <string name="parse_app_id">your parse app id</string>
    <string name="parse_client_key">your parse client key</string>

</resources>