<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity" 
    android:orientation="vertical"
    android:padding="40dp" >

    <LinearLayout
        android:layout_width="match_parent"
    	android:layout_height="wrap_content"
    	android:orientation="vertical"
        android:background="#EEE"
  		android:padding="20dp">
	    
	    <EditText android:id="@+id/user_name"
	    	android:layout_width="match_parent"
	    	android:layout_height="wrap_content"
	    	android:hint="@string/user_name" 
	    	android:padding="10dp"/>
	    
	    <EditText android:id="@+id/password"
	        android:inputType="textPassword"
	    	android:layout_width="match_parent"
	    	android:layout_height="wrap_content"
	    	android:hint="@string/password" 
	    	android:padding="10dp"/>
	    
	    <RelativeLayout
		    android:layout_width="match_parent"
		    android:layout_height="wrap_content"
		    tools:context=".LoginActivity" 
		    android:orientation="horizontal">
		    
		    <Button
		        android:id="@+id/Parse_login"
		    	android:layout_width="wrap_content"
		    	android:layout_height="wrap_content"
		    	android:text="@string/log_in_with_parse"
		    	android:onClick="logInWithParse" />  
		    	
		   	<Button
	            android:id="@+id/Parse_signup"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	           	android:text="@string/sign_up"
	            android:onClick="signUpWithParse" 
	            android:layout_alignParentRight="true" />
	   	</RelativeLayout>
    </LinearLayout>
    
    <Button
            android:id="@+id/FB_login"
            android:layout_width="wrap_content"
            android:background="@drawable/fb_log_in"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="30dp"
            android:onClick="logInWithFacebook" />

</LinearLayout>